# siksa-clock

./: .gitignore  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: feature-템플릿.md  버그-리포트.md
.github/workflows/: build-front-dev.yml
back-end/: README.md  docker-compose.yml
back-end/auth/: pyproject.toml
back-end/auth-api/: pyproject.toml
back-end/auth-api/app/: main.py
back-end/auth-api/app/config/: database.py
back-end/auth-api/app/models/: accounts.py
back-end/auth-api/app/schemas/: token.py
back-end/auth-api/app/services/: password.py  token.py
back-end/auth-api/app/tests/: test_auth.py
back-end/auth/app/: main.py
back-end/auth/app/config/: db.py
back-end/auth/app/model/: account.py
back-end/auth/app/service/: secret.py
back-end/auth/app/test/: forget_password.py  test_account.py
back-end/mealplan_api/: Dockerfile  README.md  pyproject.toml  requirements.txt
back-end/mealplan_api/app/: dependencies.py  main.py
back-end/mealplan_api/app/config/: database.py
back-end/mealplan_api/app/graphqls/: restaurants.py  user.py
back-end/mealplan_api/app/models/: restaurant.py  user.py
back-end/mealplan_api/app/resolvers/: choord.py  restaurant.py
back-end/mealplan_api/app/routers/: restaurant.py
back-end/mealplan_api/app/scalars/: user.py
back-end/mealplan_api/app/schemas/: coords.py  restaurant.py  user.py
back-end/mealplan_api/app/services/: secret.py  user.py
back-end/mealplan_api/app/test/: test_api.py  test_restaurant.py
back-end/mvp/: Dockerfile  README.md  pyproject.toml  requirements.txt
back-end/mvp/app/: dependencies.py  main.py
back-end/mvp/app/config/: database.py
back-end/mvp/app/graphql/: restaurants.py
back-end/mvp/app/graphqls/: coords.py  restaurants.py  user.py
back-end/mvp/app/models/: restaurant.py
back-end/mvp/app/resolvers/: auth.py  choord.py  restaurant.py
back-end/mvp/app/routers/: choord.py  restaurant.py
back-end/mvp/app/scalars/: coords.py  restaurant.py
back-end/mvp/app/schemas/: coords.py  restaurant.py
back-end/mvp/app/services/: api_service.py  coords.py  database.py  main.py  restaurant.py  restaurants.py  secret.py
back-end/mvp/app/test/: test_restaurant.py
front-end/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
front-end/dalsa_front/: .eslintrc.js  README.md  package.json
front-end/dalsa_front/src/: App.tsx
front-end/hale_front/: .eslintrc.js  index.html  package-lock.json  package.json
front-end/hale_front/src/: App.tsx  index.tsx
front-end/hale_front/src/assets/: color.ts  theme.ts
front-end/hale_front/src/components/: CardTitle.tsx  CongestionRate.tsx  Loading.tsx  LocationHeader.tsx  RestaurantCard.tsx  StarRate.tsx  Thumbnail.tsx
front-end/hale_front/src/hooks/: useMain.hook.ts  useRestaurants.hook.ts
front-end/hale_front/src/model/: restaurant-card.interface.ts  restaurant.interface.ts
front-end/maetdol_front/: .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json
front-end/maetdol_front/public/: index.html
front-end/maetdol_front/src/: App.tsx  global-context.tsx  routing.tsx
front-end/mona_front/: .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json
front-end/mona_front/public/: index.html
front-end/mona_front/src/: App.tsx  index.css  index.tsx
infra/: Dockerfile  default.conf  nginx.conf
nginx/: default.conf
restaurant-congestion/: README.md  api_test.py  check_data.ipynb  dalas_model_1.ipynb  data_view.ipynb  food_data_view2.ipynb  inject_api_in_database.py  inject_in_database.py  pyproject.toml  waiting_people.ipynb
restaurant-congestion/make_model/: dalas_model_1.ipynb  food_data_view2.ipynb  simple_data_vieww.ipynb  waiting_people.ipynb
(+146 files in other folders)
