[tool.poetry]
name = "auth-api"
version = "0.1.0"
description = "siksa-clock auth-api"
authors = ["hyeonprojects <axzswq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
hypercorn = "^0.13.2"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.114.1"}
SQLAlchemy = "^1.4.37"
asyncpg = "^0.25.0"
dependency-injector = "^4.39.1"
pytest = "^7.1.2"
httpx = "^0.23.0"
anyio = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
