[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["hyeonproject <axzswq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
fastapi = "^0.89.1"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^7.2.1"
pytest-html = "^3.2.0"
black = "^22.12.0"
httpx = "^0.23.3"
psycopg2 = "^2.9.5"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
