[tool.poetry]
name = "mvp"
version = "0.1.0"
description = "siksa_clock mvp"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.39"
strawberry-graphql = {extras = ["fastapi"], version = "^0.124.0"}
none = "^0.1.0-alpha.2"
httpx = "^0.23.0"
pytest = "^7.1.2"
anyio = "^3.6.1"
requests = "^2.28.0"
password = "^0.2"
schema = "^0.7.5"
crud = "^0.1"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
